--- a/src/main/resources/templates/productos.html
+++ b/src/main/resources/templates/productos.html
@@ -10,10 +10,11 @@
     <h2>Listado de Productos</h2>
     <div class="d-flex justify-content-between mb-3">
         <div>
-            <!-- TODO: Filtros -->
+            <a th:href="@{/categorias}" class="btn btn-outline-secondary btn-sm">📁 Categorías</a>
+            <a th:href="@{/almacenes}" class="btn btn-outline-secondary btn-sm ms-2">🏪 Almacenes</a>
         </div>
         <div>
-            <a th:href="@{/productos/nuevo}" class="btn btn-primary">+</a>
+            <a th:href="@{/productos/nuevo}" class="btn btn-primary">+ Nuevo Producto</a>
         </div>
     </div>
     <table class="table table-striped">
