--- a/src/main/resources/templates/solicitud-compra-detalle.html
+++ b/src/main/resources/templates/solicitud-compra-detalle.html
@@ -81,22 +81,26 @@
         <div class="stepper-wrapper" th:with="estado=${solicitud.estado.ordinal()}">
             <div class="stepper-item" th:classappend="${estado >= 0 ? 'completed' : ''}">
                 <div class="step-counter">1</div>
-                <div class="step-name">Inicio</div>
+                <div class="step-name">Pendiente</div>
             </div>
             <div class="stepper-item" th:classappend="${estado == 1 ? 'active' : ''} + ${estado > 1 ? 'completed' : ''}">
                 <div class="step-counter">2</div>
-                <div class="step-name">Presupuestada</div>
+                <div class="step-name">Cotizando</div>
             </div>
             <div class="stepper-item" th:classappend="${estado == 2 ? 'active' : ''} + ${estado > 2 ? 'completed' : ''}">
                 <div class="step-counter">3</div>
-                <div class="step-name">Comprometida</div>
+                <div class="step-name">Cotizada</div>
             </div>
             <div class="stepper-item" th:classappend="${estado == 3 ? 'active' : ''} + ${estado > 3 ? 'completed' : ''}">
                 <div class="step-counter">4</div>
-                <div class="step-name">Ingresada</div>
+                <div class="step-name">Comprometida</div>
             </div>
             <div class="stepper-item" th:classappend="${estado == 4 ? 'active' : ''} + ${estado > 4 ? 'completed' : ''}">
                 <div class="step-counter">5</div>
+                <div class="step-name">Ingresada</div>
+            </div>
+            <div class="stepper-item" th:classappend="${estado == 5 ? 'active' : ''} + ${estado > 5 ? 'completed' : ''}">
+                <div class="step-counter">6</div>
                 <div class="step-name">Finalizada</div>
             </div>
         </div>
